# passage-level-trigger-warnings

./: .dockerignore  .gitignore  Dockerfile  README.md  base.dockerfile  pyproject.toml
eacl24_trigger_warnings/: main.py  utility.py
eacl24_trigger_warnings/classification/bert/: collect_results.py  multilabel.py  singlelabel.py
eacl24_trigger_warnings/classification/gpt/: gpt_experiments.py
eacl24_trigger_warnings/dataset/: dataset.py
eacl24_trigger_warnings/evaluation/: evaluation.py
resources/: gpt-prompt-parts.json  gpt-prompt-unanimous-demonstrations.json
resources/keywords/: abuse.json  aggression.json  anno-keywords.json  childbirth.json  discrimination.json  medical.json  mental-health.json  sexual-content.json
resources/prompt/: gpt-prompt-non-unanimous-demonstrations.json  gpt-prompt-parts.json  gpt-prompt-selected-demonstrations.json
samples/: dataset-sample.jsonl
sequence_level_trigger_warning_assignment/: main.py  utility.py
sequence_level_trigger_warning_assignment/classification/: bert.py  collect_results.py  generative.py  gpt_api.py
sequence_level_trigger_warning_assignment/dataset/: dataset.py  prompt.py
sequence_level_trigger_warning_assignment/evaluation/: evaluation.py
sequence_level_trigger_warning_assignment/experiment-runners/: run-compile-datasets.sh  run-evaluate-classification.sh  run-evaluate-datasets.sh  run-experiments-binary-extended.sh  run-experiments-binary.sh  run-experiments-generative.sh  run-experiments-gpt.sh  run-experiments-multiclass.sh  run-experiments-multilabel-extended.sh  run-experiments-multilabel.sh
sequence_level_trigger_warning_assignment/notebooks/: cls-eval.ipynb  plots.ipynb
