[tool.poetry]
name = "eacl24-trigger-warnings"
version = "0.1.0"
description = "Code to reproduce the experiments, incl. utilities for data curation and analysis"
authors = ["Matti Wiegmann <mattiwiegmann@gmail.com>"]
readme = "README.md"
packages = [{include = "eacl24_trigger_warnings"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
click = "^8.1.7"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
elasticsearch = "^8.10.1"
resiliparse = "^0.14.5"
spacy = "^3.7.1"
wasabi = "^1.1.2"
krippendorff = "^0.6.1"
torch = "^2.1.0"
datasets = "^2.14.5"
transformers = "^4.34.0"
scikit-learn = "^1.3.1"
wandb = "^0.15.12"
openai = "^0.28.1"
google-cloud-aiplatform = "^1.35.0"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
