[tool.poetry]
name = "sequence-level-trigger-warning-assignment"
version = "0.1.0"
description = "Mark continuous sequences in a Document and assign them a trigger warning label."
authors = ["Matti Wiegmann <mattiwiegmann@gmail.com>"]
readme = "README.md"
packages = [{include = "sequence_level_trigger_warning_assignment"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
click = "^8.1.7"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
elasticsearch = "^8.10.1"
resiliparse = "^0.14.5"
spacy = "^3.7.1"
wasabi = "^1.1.2"
krippendorff = "^0.6.1"
datasets = "^2.14.5"
scikit-learn = "^1.3.1"
wandb = "^0.15.12"
openai = "^0.28.1"
google-cloud-aiplatform = "^1.35.0"
plotly = "^5.17.0"
torch = "^2.1.0"
transformers = "^4.35.0"
accelerate = "^0.24.1"
bitsandbytes = "^0.42.0"
huggingface-hub = "^0.20.3"
notebook = "^7.0.7"
kaleido = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
